--- a/development/my_portfolio/public/index.html
+++ b/development/my_portfolio/public/index.html
@@ -27,6 +27,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bellota:ital,wght@1,300;1,400;1,700&family=Dosis:wght@200;400;600;700;800&family=Fugaz+One&family=Gowun+Dodum&family=Harmattan:wght@400;700&family=Inknut+Antiqua:wght@300;700&family=Inter:wght@100;300;400;500;800&family=Merriweather+Sans:wght@300;600;800&family=Montserrat:ital,wght@0,100;0,500;0,900;1,400;1,900&family=Overpass:wght@100;300;600;900&family=Quicksand:wght@300;500;700&family=Shizuru&family=Titan+One&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    
     <title>ogoiddev_portfolio</title>
   </head>
   <body>
